<resources>
    <string name="app_name">RestApp</string>
    <string name="navegar_para_tela_do_post">Cadastro</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_name">Name</string>
    <string name="send">Send</string>
    <string name="prompt_phone">Phone</string>
</resources>
